@@ -2,9 +2,11 @@ DIST upkern-2.0.14.tar.bz2 9896 RMD160 9dc95fac0947346d81dc1243ac45af310b10faaa 
 DIST upkern-3.1.6.tar.bz2 18214 RMD160 a5d2156e7916e3db797d787f6c6573b37b614fd5 SHA1 75089ed4a4688aa5561c383c238ea39c519cb0fb SHA256 0bb802e5d1a9cd67445a6b5cc6c076179ee63464331415261eaa3a655fdee834
 DIST upkern-3.1.7.tar.bz2 18332 RMD160 0b599f3e62d9f33b2b0cdecaf2a6374b926aa7ce SHA1 88c9462c97821c4599b0e9787ed9e8b2975c864a SHA256 1f171e432194bcbd68d45717887fc0bed3814c79711691655bbec2478584fa9d
 DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 SHA1 23e103094c7151f09f9332032516680ef67fc0de SHA256 fb411c96c8a5e8f9c0f1d99af91abfad16d862135870bcb91b113b0897f19884
+DIST upkern-3.1.9.tar.gz 20215 RMD160 f5f6190372c9a067d397bbe05f99b05e7212161b SHA1 90dd99a982729c5a27f3d97ddc4ed40e5c54925e SHA256 791c39279b019b285afc1ae7dd409e498909b1a1fd3e115a93967fc040cdaccd
 EBUILD upkern-2.0.14.ebuild 596 RMD160 50ac2bfca3761b0df2acda9f856441f8322c6dcb SHA1 b26e880841fbfb3c49a730011a0cde0bc7465dfb SHA256 e22c867be53016c207d024965d26eecc841ded5fe67a5f7d3c76e19e1d8475a8
 EBUILD upkern-3.1.6.ebuild 831 RMD160 32894455a619f8953e2d2382b2ba8f85680b3c21 SHA1 123c3fca25c40b4efc1aa8393bfb0ca1f2bbb709 SHA256 b44054b629559b2e2f724c1007b6acae1401416ba15d5c5278fd3a96baae7f36
 EBUILD upkern-3.1.7.ebuild 831 RMD160 32894455a619f8953e2d2382b2ba8f85680b3c21 SHA1 123c3fca25c40b4efc1aa8393bfb0ca1f2bbb709 SHA256 b44054b629559b2e2f724c1007b6acae1401416ba15d5c5278fd3a96baae7f36
 EBUILD upkern-3.1.8.ebuild 830 RMD160 4c95c1193cfbcd68899ffd1bd910663572e0e79e SHA1 bdbf548ad52a308df62d7095d4612292e103b387 SHA256 3bf6565960b3e3d459fcefadc8c469f3f69e1d6f902362cfa7297986a2eefeaf
-MISC ChangeLog 2237 RMD160 653dce4ae405268b07b795303183eef780978c64 SHA1 f06faa25b6f5e94544b0da7e58408e3eca1bc3d2 SHA256 65e514a1a17fe71fa8883e8beedeb51ee23210371ef430fc878e1b1fa5d03f68
+EBUILD upkern-3.1.9.ebuild 859 RMD160 576d7886aa7cd6c7f7c7eeb5032cbb8db5334386 SHA1 efd10847107f1cea8cf42898f4bfa84fde09a5ad SHA256 a7e08e28440b45245e59c219c87a26cc8b7cccd7e0ecece074b2414bc1e254d8
+MISC ChangeLog 2348 RMD160 8c85554dc6541c9db30371f33b700e52ef538ebf SHA1 75d9cf153ef48b40cc4c60865312aa0206869488 SHA256 7181ac2658c2bcedc512f4e316e8475ba91ee57ac285e10cd6263841aab39084
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
