@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+*upkern-3.1.9 (23 Jul 2011)
+
+  23 Jul 2011; <alunduil@gentoo.org> +upkern-3.1.9.ebuild:
+  Adding upkern-3.1.9
+
   16 Jun 2011; <alunduil@gentoo.org> upkern-3.1.8.ebuild, metadata.xml:
   Stable on x86 with gentoolkit 0.3.0.4
 
